--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -14,7 +14,13 @@
     </head>
     <body>
        <header class="header">
-
+            <div class="logo-box">
+                <img  src="img/logo-white.png" alt="Logo white" class="logo">
+            </div>
+            <h1 class="heading-primary">
+                <span class="heading-primay-main">Outdoors</span>
+                <span class="heading-primary-sub">is where life happen</span>
+            </h1>
        </header>
     </body>
 </html>
