--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -14,13 +14,20 @@
     </head>
     <body>
        <header class="header">
+
             <div class="logo-box">
                 <img  src="img/logo-white.png" alt="Logo white" class="logo">
             </div>
+
+            <div class="header-text">
             <h1 class="heading-primary">
-                <span class="heading-primay-main">Outdoors</span>
+                <span class="heading-primary-main">Outdoors</span>
                 <span class="heading-primary-sub">is where life happen</span>
             </h1>
+
+            <a href="#" class="btn btn-white">Discover More</a>
+        </div>
+
        </header>
     </body>
 </html>
