--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -25,7 +25,7 @@
                 <span class="heading-primary-sub">is where life happen</span>
             </h1>
 
-            <a href="#" class="btn btn-white">Discover More</a>
+            <a href="#" class="btn btn-white btn-animated">Discover our tour</a>
         </div>
 
        </header>
