--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -15,17 +15,17 @@
     <body>
        <header class="header">
 
-            <div class="logo-box">
-                <img  src="img/logo-white.png" alt="Logo white" class="logo">
+            <div class="header__logo-box">
+                <img  src="img/logo-white.png" alt="Logo white" class="header__logo">
             </div>
 
-            <div class="header-text">
+            <div class="header__text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary-main">Outdoors</span>
-                <span class="heading-primary-sub">is where life happen</span>
+                <span class="heading-primary--main">Outdoors</span>
+                <span class="heading-primary--sub">is where life happen</span>
             </h1>
 
-            <a href="#" class="btn btn-white btn-animated">Discover our tour</a>
+            <a href="#" class="btn btn--white btn--animated">Discover our tour</a>
         </div>
 
        </header>
