--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -32,7 +32,7 @@
 
         <main>
             <section class="section-about">
-                <div class="u-centre-text u-margin-bottom-8">
+                <div class="u-centre-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Excited tours for adventurous tour
                     </h2>
@@ -40,10 +40,26 @@
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        text content
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia veniam non debitis laboriosam sint quaerat nam, dolore recusandae, natus aliquid! Quam pariatur iste quis, dolor officia consectetur sequi quae.
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam consequuntur debitis autem, veritatis id eveniet.
+                        </p>
+
+                        <a href="#" class="btn-text">
+                            Learn more &rarr;
+                        </a>
                     </div>
                     <div class="col-1-of-2">
-                       image
+                        <div class="composition">
+                            <img src="./img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="./img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="./img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        </div>
                     </div>
                 </div>
             </section>
