--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -63,6 +63,52 @@
                     </div>
                 </div>
             </section>
+
+            <section class="section-features">
+
+
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <a class="feature-box__icon icon-basic-world"></a>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, harum unde aspernatur magni, sunt illum cumque delectus cum autem placeat.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, harum unde aspernatur magni, sunt illum cumque delectus cum autem placeat.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <a class="feature-box__icon icon-basic-map"></a>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, harum unde aspernatur magni, sunt illum cumque delectus cum autem placeat.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <a class="feature-box__icon icon-basic-heart"></a>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Live a Healthier life</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, harum unde aspernatur magni, sunt illum cumque delectus cum autem placeat.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
 
