--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -8,7 +8,7 @@
 
         <!-- <link rel="stylesheet" href=""> -->
         <link rel="stylesheet" href="./css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
 
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
@@ -66,7 +66,6 @@
 
             <section class="section-features">
 
-
                 <div class="row">
                     <div class="col-1-of-4">
                         <div class="feature-box">
@@ -105,6 +104,57 @@
                             <p class="feature-box__text">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, harum unde aspernatur magni, sunt illum cumque delectus cum autem placeat.
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-tour">
+                <div class="u-centre-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Most popular tours
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__side card__side--front">
+                                    <div class="card__picture card__picture--1">
+                                        &nbsp;
+                                    </div>
+
+                                    <div class="card__heading">
+
+                                    </div>
+                                    <div class="card__details">
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-1">
+                                Back
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                Text
+                            </div>
+                            <div class="card__side card__side--back card__side--back-2">
+                                Back
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                Text
+                            </div>
+                            <div class="card__side card__side--back card__side--back-3">
+                                Back
+                            </div>
                         </div>
                     </div>
                 </div>
