--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -221,6 +221,52 @@
                     <a href="#" class="btn btn--green">Discover all tours</a>
                 </div>
             </section>
+
+            <section class="section-stories">
+                <div class="u-centre-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="./img/nat-8.jpg" alt="Person" class="story__image">
+                            <figcaption class="story__caption">Mary smith</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary  u-margin-bottom-small">I had the best week ever with my family</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus expedita ab ad provident, 
+                                itaque eius saepe veniam doloribus quis molestiae harum delectus. Voluptas cupiditate est molestiae,
+                                 accusamus vel pariatur maiores.Voluptas cupiditate est molestiae,
+                                 accusamus vel pariatur maiores.</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="./img/nat-9.jpg" alt="Person" class="story__image">
+                            <figcaption class="story__caption">Jack wilson</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary  u-margin-bottom-small">Wow my life is completely different now.</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus expedita ab ad provident, 
+                                itaque eius saepe veniam doloribus quis molestiae harum delectus. Voluptas cupiditate est molestiae,
+                                 accusamus vel pariatur maiores.Voluptas cupiditate est molestiae,
+                                 accusamus vel pariatur maiores.</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="u-centre-text u-margin-top-huge">
+                    <a href="#" class="btn-text">Read all Story &rarr;</a>
+                </div>
+            </section>
         </main>
 
 
