--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -275,6 +275,28 @@
                     <a href="#" class="btn-text">Read all Story &rarr;</a>
                 </div>
             </section>
+
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+
+                                <div class="u-margin-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Start Looking Now
+                                    </h2>
+                                </div>
+
+                                <input type="text" name="firstName" id="name" class="form__input" placeholder="Full Name" required>
+                                <label for="name" class="form__label">Full Name</label>
+                                <input type="email" name="email" id="email" class="form__input" placeholder="Email Address" required>
+                                <label for="email" class="form__label">Email Address</label>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
 
