--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -288,16 +288,67 @@
                                     </h2>
                                 </div>
 
-                                <input type="text" name="firstName" id="name" class="form__input" placeholder="Full Name" required>
-                                <label for="name" class="form__label">Full Name</label>
-                                <input type="email" name="email" id="email" class="form__input" placeholder="Email Address" required>
-                                <label for="email" class="form__label">Email Address</label>
+                                <div class="form__group">
+                                    <input type="text" name="firstName" id="name" class="form__input" placeholder="Full Name" required>
+                                    <label for="name" class="form__label">Full Name</label>
+                                </div>
+
+                                <div class="form__group">
+                                    <input type="email" name="email" id="email" class="form__input" placeholder="Email Address" required>
+                                    <label for="email" class="form__label">Email Address</label>
+                                </div>
+
+                                <div class="form__group u-margin-bottom-medium">
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="small" name="size">
+                                        <label for="small" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Small tour group</label>
+                                    </div>
+
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="large" name="size">
+                                        <label for="large" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Large tour group</label>
+                                    </div>
+                                </div>
+
+                                <div class="form__group">
+                                    <button type="submit" class="btn btn--green">Next step &rarr;</button>
+                                </div>
+
                             </form>
                         </div>
                     </div>
                 </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="/img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer_navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer_copyright">
+                        Build this from online Udemy online course <a href="https://www.udemy.com/course/advanced-css-and-sass/learn/lecture/8312878#overview" class="footer__link" target="_blank">Advance Css and Sass</a>
+                    </p>
+                </div>
+            </div>
+        </footer>
 
 
     </body>
