--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -332,7 +332,7 @@
 
             <div class="row">
                 <div class="col-1-of-2">
-                    <div class="footer_navigation">
+                    <div class="footer__navigation">
                         <ul class="footer__list">
                             <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
                             <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
@@ -343,8 +343,8 @@
                     </div>
                 </div>
                 <div class="col-1-of-2">
-                    <p class="footer_copyright">
-                        Build this from online Udemy online course <a href="https://www.udemy.com/course/advanced-css-and-sass/learn/lecture/8312878#overview" class="footer__link" target="_blank">Advance Css and Sass</a>
+                    <p class="footer__copyright">
+                        Build this from online Udemy online course <a rel=noopener href="https://www.udemy.com/course/advanced-css-and-sass/learn/lecture/8312878#overview" class="footer__link" target="_blank">Advance Css and Sass</a>
                     </p>
                 </div>
             </div>
