--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -15,19 +15,21 @@
     <body>
 
         <div class="navigation">
-            <input type="checkbox" class="navigation__checkbox" id="navi_toggle">
+            <input type="checkbox" class="navigation__checkbox" id="navi_toggle" placeholder="check">
 
-            <label for="navi_toggle" class="navigation__button">MENU</label>
+            <label for="navi_toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
 
             <div class="navigation__background">&nbsp;</div>
 
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="#" class="navigation__link">About Natous</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link">Your benefits</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link">Popular tours</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link">Book Now</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natous</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>AYour benefits</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>APopular tours</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>AStories</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>ABook Now</a></li>
                 </ul>
             </nav>
         </div>
@@ -368,6 +370,28 @@
             </div>
         </footer>
 
+        <div class="popup">
+            <div class="popup__content">
+               <div class="popup__left">
+                    <img src="./img/nat-8.jpg" alt="Popup Photo" class="popup__img">
+                    <img src="./img/nat-9.jpg" alt="Popup photo" class="popup__img">
+               </div>
+               <div class="popup__right">
+                    <h2 class="heading-secondary">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Importand &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text u-margin-bottom-small">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        In recusandae illum veniam aperiam asperiores ipsa laborum commodi, 
+                        eaque provident unde blanditiis eligendi quae iste ab rerum eveniet libero voluptas dignissimos?
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        In recusandae illum veniam aperiam asperiores ipsa laborum commodi, 
+                        eaque provident unde blanditiis eligendi quae iste ab rerum eveniet libero voluptas dignissimos?
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        In recusandae illum veniam aperiam asperiores ipsa laborum commodi, </p>
+                    <a href="#" class="btn btn--green">Book Now</a>
+               </div>
+            </div>
+            </div>
+        </div>
 
     </body>
 </html>
