--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -45,7 +45,7 @@
                     <span class="heading-primary--sub">is where life happen</span>
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated">Discover our tour</a>
+                <a href="#section_tours" class="btn btn--white btn--animated">Discover our tour</a>
             </div>
 
         </header>
@@ -129,7 +129,7 @@
                 </div>
             </section>
 
-            <section class="section-tour">
+            <section class="section-tour" id="section_tours">
                 <div class="u-centre-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -164,7 +164,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup_window" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$497</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup_window" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -230,7 +230,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$897</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup_window" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -296,7 +296,7 @@
                 </div>
             </section>
 
-            <section class="section-book">
+            <section class="section-book" id="booking">
                 <div class="row">
                     <div class="book">
                         <div class="book__form">
@@ -370,13 +370,14 @@
             </div>
         </footer>
 
-        <div class="popup">
+        <div class="popup" id="popup_window">
             <div class="popup__content">
                <div class="popup__left">
                     <img src="./img/nat-8.jpg" alt="Popup Photo" class="popup__img">
                     <img src="./img/nat-9.jpg" alt="Popup photo" class="popup__img">
                </div>
                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
                     <h2 class="heading-secondary">Start booking now</h2>
                     <h3 class="heading-tertiary u-margin-bottom-small">Importand &ndash; Please read these terms before booking</h3>
                     <p class="popup__text u-margin-bottom-small">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -387,7 +388,7 @@
                         eaque provident unde blanditiis eligendi quae iste ab rerum eveniet libero voluptas dignissimos?
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                         In recusandae illum veniam aperiam asperiores ipsa laborum commodi, </p>
-                    <a href="#" class="btn btn--green">Book Now</a>
+                    <a href="#booking" class="btn btn--green">Book Now</a>
                </div>
             </div>
             </div>
